--- a/exercicios-javascript/Aula 15 - Variavéis Compostas/ex016/ex016.html
+++ b/exercicios-javascript/Aula 15 - Variavéis Compostas/ex016/ex016.html
@@ -15,12 +15,12 @@
     <section>
         <div>
         <p>Número: <input type="text" oninput="this.value=this.value.replace(/[^0-9-.]/g,'');" id="numero">
-        <input type="button" value="Adicionar" onclick="adicionar()"><input type="button" value="Remover" onclick="remover()"></p>
+        <input type="button" value="Adicionar" onclick="adicionar()"></p>
         <div id="caixa_resultado">
-            <select name="print_lista" id="print_lista" size="10">
-                <option value="padrao">Entre com um número</option>
-            </select><br>
-
+            <select name="print_lista" id="print_lista" size="10" >
+                <option value="Entre com um número">Entre com um número</option>
+            </select>
+            <input type="button" value="Remover" onclick="remover()">
             
         </div>
         <p><input type="button" value="Finalizar" onclick="finalizar()"></p>
